
** emacspeak-elfeed.el:

Speech-enables package elfeed, a powerful feed-reader for Emacs.


** sox.el Audacious --- Audio WorkBench For Emacspeak 

Module sox.el implements a light-weight Emacs UI to create Audacious --- An Audio Workbench for  the Emacspeak Desktop.

** emacspeak-m-player.el

Provides a large number of reverb presets using  Ladspa plugin tap-reverb.

** Directory realaudio renamed to  media 

Directory realaudio -- the directory containing streaming media presets has now been renamed to _media_.
Realaudio is now legacy and all code in Emacspeak had been updated a few years ago to use _mplayer_ to play media streams; this renaming is purely cosmetic.
Also overhauled set of links in media directory.
Finally, emacspeak-multimedia defaults to prompting  for shortcuts in media/radio unless the current directory itself contains media.

** Tune-In: Search And Browse Radio Stations

emacspeak-url-template now defines templates for searching and browsing tune-in radio stations. Interactive commands 
emacspeak-wizards-tune-in-radio-browse and emacspeak-wizards-tune-in-radio-search can be bound to convenient shortcut keys to invoke this functionality.

** emacspeak-markdown.el:

Speech-enable markdown-mode.

** realaudio/radio 

Updated all BBC  playlists to mp3/m3u files 
Note that Windows Media (.asx) is no longer supported by the BBC  after Dec 31, 2014.

** emacspeak-xref.el: Speech-Enable xref.el  

Navigating cross-references in source code.


** emacspeak-package.el

Enhancements for package.el

** EWW Web Support: Emacspeak-eww
   
Enhanced support for EWW, including structured navigation.

** Emacs 25 Support

Speech-enables Emacs 25 features.


** AMark Support For M-Player

You can now mark positions in  an mplayer stream and return to it
later.
This brings the same functionality to emacspeak-m-player that was
formerly available in emacspeak-alsaplayer 

** Better Support For Display  Property 

Handles more cases of property _display_.