@@ -97,7 +97,10 @@
   many speech servers. This section documents the communication
   protocol between the client application i.e. Emacspeak, and the
   TTS server. This section is primarily intended for developers
-  wishing to:</p>
+  wishing to: For additional notes on how to log and view TTS
+  server commands when developping a speech server, see <a href=
+  "http://emacspeak.blogspot.com/2015/04/howto-log-speech-server-output-to-aid.html">
+  http://emacspeak.blogspot.com/2015/04/howto-log-speech-server-output-to-aid.html</a>.</p>
 
   <ul>
     <li>Create new speech servers that comply with this
