@@ -6,6 +6,8 @@
         speech servers. This section documents the communication protocol
         between the client application i.e. Emacspeak, and the TTS
         server. This section is primarily intended for developers wishing to:
+For additional notes on how to log and view TTS server  commands when developping a speech server, see @url{http://emacspeak.blogspot.com/2015/04/howto-log-speech-server-output-to-aid.html}.
+
         @itemize @bullet
         @item Create new speech servers that comply with this communication
         protocol 
